# Eye-Tracker

./: pyproject.toml
docs/: CAMERAS.md  INSTALACAO.md  README.md
project/: main.py  settings.py
project/capturers/: __init__.py  haar_blob.py
project/frame_sources/: __init__.py  camera.py  file.py  folder.py  video.py
project/gui/: application_window.py
project/gui/assets/: GUImain.ui
