[tool.poetry]
name = "eye-tracker"
version = "0.2.0"
description = "An Eye-tracking solution"
authors = ["Stepan <stepanfilonov@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^2.0"
opencv-python = "^4.10"
PyQt6 = "^6.6"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
isort = "^5.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
